--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-hw-06-phonebook-25",
+  "name": "react-07-phonebook-25",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://padalka-sergey.github.io/react-hw-06-phonebook-25/",
+  "homepage": "https://padalka-sergey.github.io/react-07-phonebook-25/",
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@testing-library/jest-dom": "^5.16.3",
